--- a/SendSlackMessage.xaml
+++ b/SendSlackMessage.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>546,624</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>928,831</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -73,7 +73,7 @@
         <OutArgument x:TypeArguments="x:String">[channel]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">["@"+ in_EmailID.Substring(0,in_EmailID.IndexOf("@"))]</InArgument>
+        <InArgument x:TypeArguments="x:String">["Test @"+ in_EmailID.Substring(0,in_EmailID.IndexOf("@"))]</InArgument>
       </Assign.Value>
     </Assign>
     <sms:SlackClient UserName="{x:Null}" BotToken="xoxb-120765618566-1084839733955-lzVBoxxntJAXzvyzmvQbpQT1" Channel="UNH4ZGDDG" DisplayName="Slack client" ErrorMessage="[strErrorMessage]" sap:VirtualizedContainerService.HintSize="484,22" sap2010:WorkflowViewState.IdRef="SlackClient_1" Message="This is a test message from Notification Bot" Response="[response]" />
